# ARGUS

./: .gitignore  README.md  article.md  pyproject.toml  requirements.txt
argus/: __init__.py  __version__.py
argus/evaluation/: __init__.py  bootstrap.py  calibration.py  metrics.py  survival.py
argus/inference/: __init__.py  pipeline.py  predictor.py  server.py
argus/interpretation/: __init__.py  attention.py  attribution.py  clinical.py
argus/models/: __init__.py  argus.py
argus/models/encoders/: __init__.py  attention.py  position_encoding.py  static_encoder.py  temporal_encoder.py
argus/models/fusion/: __init__.py  concat.py  cross_attention.py  gated.py
argus/models/heads/: __init__.py  classification.py  ordinal.py
argus/models/losses/: __init__.py  bce.py  focal.py  multitask.py
argus/training/: __init__.py  callbacks.py  optimizers.py  schedulers.py  trainer.py
argus/utils/: __init__.py  io.py  logging.py  registry.py  visualization.py
configs/: __init__.py  defaults.yaml
configs/evaluation/: metrics.yaml
configs/model/: argus_base.yaml  argus_large.yaml  argus_small.yaml
configs/training/: default.yaml
scripts/: __init__.py  evaluate.py  interpret.py  predict.py  train.py
